<resources>
    <string name="app_name">CTMS</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="innings_1">Innings 1</string>
    <string name="innings_2">Innings 2</string>
    <string name="rank">Rank</string>
    <string name="team">Team</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="draws">Draws</string>
    <string name="points">Points</string>

    <string-array name="num_teams">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="num_overs">
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>
</resources>